Page Acerca de y Contacto

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="encabezado">
         <table>
             <tr>
-                <td><a href="pages/home.html">Home</a></td>
-                <td><a href="pages/acercade.html">Acerca de</a></td>
-                <td><a href="pages/contacto.html">Contacto</a></td>
+                <td><a class="linksorange" href="pages/home.html">Home</a></td>
+                <td><a class="linksorange" href="pages/acercade.html">Acerca de</a></td>
+                <td><a class="linksorange" href="pages/contacto.html">Contacto</a></td>
             </tr>
         </table>
     </div>
@@ -24,7 +24,7 @@
     <h2>Sopa Crema de Calabaza</h2>
     <img src="https://www.deliciosi.com/images/300/378/crema-de-calabaza.jpg" width="30%" weigth="30%">
     <div class="receta">
-        <a href="pages/receta.html">Receta</a>
+        <a class="linksorange" href="pages/receta.html">Receta</a>
     </div>
 
     <footer>Derechos reservados @2020</footer>
