--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Contacto</title>
 </head>
 <body>
+    <div class="encabezado">
+        <table>
+            <tr>
+                <td><a class="linksorange" href="home.html">Home</a></td>
+                <td><a class="linksorange" href="acercade.html">Acerca de</a></td>
+                <td><a class="linksorange" href="contacto.html">Contacto</a></td>
+            </tr>
+        </table>
+    </div>
+    <header>La Cocina de Juan</header>
+    <h1>Contacto</h1>
+    <p class="contacto">Envíame tus sugerencias de recetas a mi correo: <a class"mail" href="ejemplo@gmail.com">ejemplo@gmail.com</a></p> 
     
+    <footer>Derechos reservados @2020</footer>
 </body>
 </html>
