--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="encabezado">
         <table>
             <tr>
-                <td><a class="linksorange" href="pages/home.html">Home</a></td>
+                <td><a class="linksorange" href="index.html">Home</a></td>
                 <td><a class="linksorange" href="pages/acercade.html">Acerca de</a></td>
                 <td><a class="linksorange" href="pages/contacto.html">Contacto</a></td>
             </tr>
