--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
     <div class="encabezado">
         <table>
             <tr>
-                <td><a class="linksorange" href="home.html">Home</a></td>
+                <td><a class="linksorange" href="../index.html">Home</a></td>
                 <td><a class="linksorange" href="acercade.html">Acerca de</a></td>
                 <td><a class="linksorange" href="contacto.html">Contacto</a></td>
             </tr>
