--- a/pages/receta.html
+++ b/pages/receta.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Sopa Calabaza</title>
 </head>
+
 <body>
-    
+    <div class="encabezado">
+        <table>
+            <tr>
+                <td><a class="linksorange" href="../index.html">Home</a></td>
+                <td><a class="linksorange" href="acercade.html">Acerca de</a></td>
+                <td><a class="linksorange" href="contacto.html">Contacto</a></td>
+            </tr>
+        </table>
+    </div>
+    <header>La Cocina de Juan</header>
+    <h1>Sopa Crema de Calabaza</h1>
+    <img src="https://www.deliciosi.com/images/300/378/crema-de-calabaza.jpg" width="30%" weigth="30%">
+    <p class="sopareceta">Preparación: Lavar y pelar la calabaza, cortarla en trozos grandes
+        <div class="sopareceta">Colocar una olla con el agua, el laurel, apio, sal y la calabaza. Dejarlo hervir durante 1 hora, procesar y
+            servir</div>
+    </p>
+    <footer>Derechos reservados @2020</footer>
 </body>
+
 </html>
